Created list items from user search and added Event Listeners. Next updates will pulling data from click events

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ html {
 .input-field {
   display: flex;
   justify-content: center; }
+  .input-field ul {
+    background-color: white; }
+    .input-field ul li {
+      text-decoration: none; }
 
 /*
   ======================================
