--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,9 @@ html {
 .input-field {
   display: flex;
   justify-content: center; }
+  .input-field label {
+    color: white;
+    font-size: 1.5em; }
   .input-field ul {
     background-color: white;
     z-index: 3;
