--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,6 +37,11 @@ html {
   display: flex;
   justify-content: center;
 
+  label {
+    color: white;
+    font-size: 1.5em;
+  }
+
   ul {
     background-color: white;
     z-index: 3;
